add_executable(helloworld helloworld.cpp)
#target_link_libraries(helloworld my_own_library)

add_executable(tests tests.cpp)

add_executable(aufgabe1-3 aufgabe1-3.cpp)

add_executable(aufgabe1-9 aufgabe1-9.cpp)

add_executable(aufgabe1-10 aufgabe1-10.cpp)

add_executable(aufgabe1-12 aufgabe1-12.cpp)

# Kommentieren Sie die folgenden Zeilen fuer die Aufgabe `mile_to_kilometer` aus
#add_executable(mile_to_kilometer mile_to_kilometer.cpp)
