add_executable(helloworld helloworld.cpp)
#target_link_libraries(helloworld my_own_library)

add_executable(tests tests.cpp)

add_executable(aufgabe1-03 aufgabe1-03.cpp)

add_executable(aufgabe1-09 aufgabe1-09.cpp)

add_executable(aufgabe1-10 aufgabe1-10.cpp)

add_executable(aufgabe1-11 aufgabe1-11.cpp)

add_executable(aufgabe1-12 aufgabe1-12.cpp)

add_executable(aufgabe1-13 aufgabe1-13.cpp)

add_executable(aufgabe1-14 aufgabe1-14.cpp)

# Kommentieren Sie die folgenden Zeilen fuer die Aufgabe `mile_to_kilometer` aus
add_executable(mile_to_kilometer mile_to_kilometer.cpp)
